# SPEC-001_Personal-RAG-LLM

./: .gitignore  Makefile  README.md  chroma_api_test.py  comprehensive_rag_test.py  container_test.py  database_connection_test.py  docker_db_test.py  docker_integration_test.py  neo4j_compatible_test.py  processor_main.py  quick_test.py  requirements.txt  run_processing_tests.py  run_processor.py  standalone_processor.py  start-services.sh  test_chroma_connection.py  test_complete_rag_pipeline.py  test_complete_rag_system.py  test_enhanced_pipeline.py  test_integration.py  test_processor.py  verify_setup.py
services/llm/: Dockerfile  pyproject.toml  requirements.txt
services/processor/: Dockerfile  debug_config.py  debug_imports.py  debug_vlm_file.py  debug_vlm_test.py  process_with_vlm.py  progressive_vlm_test.py  pyproject.toml  requirements.txt  test_cpu_vlm.py  test_enhanced_integration.py  test_import.py  test_vlm.py  test_vlm_integration.py
services/processor/conf/: config.yaml  config_default.yaml  dataset_config.yaml
services/processor/conf/classifiers/: default.yaml
services/processor/conf/embedders/: default.yaml
services/processor/conf/extractors/: default.yaml
services/processor/conf/storage/: default.yaml
services/processor/conf/vlm/: cpu_optimized.yaml  default.yaml  developement.yaml
services/processor/src/: __init__.py  main.py
services/processor/src/models/: document.py
services/processor/src/pipeline/: classifier.py  content_detector.py  document_pipeline.py  enhanced_ocr_processor.py  enhanced_processor.py  image_extractor.py  inspect_dataset.py  office_extractor.py  pdf_processor.py  process_complete_dataset.py  process_dataset.py  qwen_processor.py  simple_processor.py  standalone_dataset_processor.py  storage_integration.py  vlm_integrated_processor.py  vlm_integrated_processor.py.wrong  zip_dataset_processor.py  zip_processor.py  zip_processor_fixed.py
(+828 files in other folders)
