[tool.poetry]
name = "llm"
version = "0.1.0"
description = "LLM engine service for Personal RAG-LLM"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
hydra-core = "^1.3.2"
fastapi = "^0.104.1"
pydantic = "^2.4.2"
uvicorn = "^0.23.2"
ollama = "^0.1.5"
sentence-transformers = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pylint = "^3.0.2"
black = "^23.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
